fix(switches) missing semicolons, missing `tr`

--- a/src/base/switches.html
+++ b/src/base/switches.html
@@ -792,27 +792,27 @@
                   <div class="card-body">
                     <label class="switch switch-label switch-primary">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-secondary">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-success">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-warning">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-info">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-danger">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                   </div>
                 </div>
@@ -824,27 +824,27 @@
                   <div class="card-body">
                     <label class="switch switch-label switch-pill switch-primary">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-pill switch-secondary">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-pill switch-success">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-pill switch-warning">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-pill switch-info">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-pill switch-danger">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                   </div>
                 </div>
@@ -856,27 +856,27 @@
                   <div class="card-body">
                     <label class="switch switch-label switch-outline-primary">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-outline-secondary">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-outline-success">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-outline-warning">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-outline-info">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-outline-danger">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                   </div>
                 </div>
@@ -888,27 +888,27 @@
                   <div class="card-body">
                     <label class="switch switch-label switch-pill switch-outline-primary">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-pill switch-outline-secondary">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-pill switch-outline-success">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-pill switch-outline-warning">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-pill switch-outline-info">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-pill switch-outline-danger">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                   </div>
                 </div>
@@ -920,27 +920,27 @@
                   <div class="card-body">
                     <label class="switch switch-label switch-outline-primary-alt">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-outline-secondary-alt">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-outline-success-alt">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-outline-warning-alt">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-outline-info-alt">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-outline-danger-alt">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                   </div>
                 </div>
@@ -952,27 +952,27 @@
                   <div class="card-body">
                     <label class="switch switch-label switch-pill switch-outline-primary-alt">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-pill switch-outline-secondary-alt">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-pill switch-outline-success-alt">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-pill switch-outline-warning-alt">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-pill switch-outline-info-alt">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                     <label class="switch switch-label switch-pill switch-outline-danger-alt">
                       <input class="switch-input" type="checkbox" checked="">
-                      <span class="switch-slider" data-checked="&#x2713" data-unchecked="&#x2715"></span>
+                      <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
                     </label>
                   </div>
                 </div>
@@ -984,9 +984,11 @@
                   <div class="card-body p-0">
                     <table class="table table-hover table-striped table-align-middle mb-0">
                       <thead>
-                        <th>Size</th>
-                        <th>Example</th>
-                        <th>CSS Class</th>
+                        <tr>
+                          <th>Size</th>
+                          <th>Example</th>
+                          <th>CSS Class</th>
+                        </tr>
                       </thead>
                       <tbody>
                         <tr>
