refactor(modals): buttons margin

--- a/src/notifications/modals.html
+++ b/src/notifications/modals.html
@@ -368,15 +368,15 @@
                     <i class="fa fa-align-justify"></i> Bootstrap Modals</div>
                   <div class="card-body">
                     <!-- Button trigger modal-->
-                    <button class="btn btn-secondary" type="button" data-toggle="modal" data-target="#myModal">Launch demo modal</button>
-                    <button class="btn btn-secondary" type="button" data-toggle="modal" data-target="#largeModal">Launch large modal</button>
-                    <button class="btn btn-secondary" type="button" data-toggle="modal" data-target="#smallModal">Launch small modal</button>
+                    <button class="btn btn-secondary mb-1" type="button" data-toggle="modal" data-target="#myModal">Launch demo modal</button>
+                    <button class="btn btn-secondary mb-1" type="button" data-toggle="modal" data-target="#largeModal">Launch large modal</button>
+                    <button class="btn btn-secondary mb-1" type="button" data-toggle="modal" data-target="#smallModal">Launch small modal</button>
                     <hr>
-                    <button class="btn btn-primary" type="button" data-toggle="modal" data-target="#primaryModal">Primary modal</button>
-                    <button class="btn btn-success" type="button" data-toggle="modal" data-target="#successModal">Success modal</button>
-                    <button class="btn btn-warning" type="button" data-toggle="modal" data-target="#warningModal">Warning modal</button>
-                    <button class="btn btn-danger" type="button" data-toggle="modal" data-target="#dangerModal">Danger modal</button>
-                    <button class="btn btn-info" type="button" data-toggle="modal" data-target="#infoModal">Info modal</button>
+                    <button class="btn btn-primary mb-1" type="button" data-toggle="modal" data-target="#primaryModal">Primary modal</button>
+                    <button class="btn btn-success mb-1" type="button" data-toggle="modal" data-target="#successModal">Success modal</button>
+                    <button class="btn btn-warning mb-1" type="button" data-toggle="modal" data-target="#warningModal">Warning modal</button>
+                    <button class="btn btn-danger mb-1" type="button" data-toggle="modal" data-target="#dangerModal">Danger modal</button>
+                    <button class="btn btn-info mb-1" type="button" data-toggle="modal" data-target="#infoModal">Info modal</button>
                   </div>
                 </div>
               </div>
