fix(collapse): add mb-0 to accordion cards

--- a/src/base/collapse.html
+++ b/src/base/collapse.html
@@ -416,7 +416,7 @@
                   </div>
                   <div class="card-body">
                     <div id="accordion" role="tablist">
-                      <div class="card">
+                      <div class="card mb-0">
                         <div class="card-header" id="headingOne" role="tab">
                           <h5 class="mb-0">
                             <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Collapsible Group Item #1</a>
@@ -428,7 +428,7 @@
                             Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</div>
                         </div>
                       </div>
-                      <div class="card">
+                      <div class="card mb-0">
                         <div class="card-header" id="headingTwo" role="tab">
                           <h5 class="mb-0">
                             <a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Collapsible Group Item #2</a>
@@ -440,7 +440,7 @@
                             Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</div>
                         </div>
                       </div>
-                      <div class="card">
+                      <div class="card mb-0">
                         <div class="card-header" id="headingThree" role="tab">
                           <h5 class="mb-0">
                             <a class="collapsed" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Collapsible Group Item #3</a>
