--- a/src/register.html
+++ b/src/register.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--
 * CoreUI - Free Bootstrap Admin Template
-* @version v3.0.0-alpha.0
+* @version v3.0.0-alpha.1
 * @link https://coreui.io
-* Copyright (c) 2018 creativeLabs Łukasz Holeczek
+* Copyright (c) 2019 creativeLabs Łukasz Holeczek
 * Licensed under MIT (https://coreui.io/license)
 -->
 
@@ -55,7 +55,7 @@
       gtag('config', 'UA-118965717-5');
     </script>
   </head>
-  <body class="c-app c-default-layout flex-row align-items-center">
+  <body class="c-app flex-row align-items-center">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-6">
@@ -64,19 +64,31 @@
               <h1>Register</h1>
               <p class="text-muted">Create your account</p>
               <div class="input-group mb-3">
-                <div class="input-group-prepend"><span class="input-group-text"><img class="c-icon" src="assets/icons/user.svg" width="16" height="16" alt="CoreUI Icons User"></span></div>
+                <div class="input-group-prepend"><span class="input-group-text">
+                    <svg class="c-icon">
+                      <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-user"></use>
+                    </svg></span></div>
                 <input class="form-control" type="text" placeholder="Username">
               </div>
               <div class="input-group mb-3">
-                <div class="input-group-prepend"><span class="input-group-text"><span class="c-icon">@</span></span></div>
+                <div class="input-group-prepend"><span class="input-group-text">
+                    <svg class="c-icon">
+                      <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-envelope-open"></use>
+                    </svg></span></div>
                 <input class="form-control" type="text" placeholder="Email">
               </div>
               <div class="input-group mb-3">
-                <div class="input-group-prepend"><span class="input-group-text"><img class="c-icon" src="assets/icons/lock-locked.svg" width="16" height="16" alt="CoreUI Icons Lock Locked"></span></div>
+                <div class="input-group-prepend"><span class="input-group-text">
+                    <svg class="c-icon">
+                      <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lock-locked"></use>
+                    </svg></span></div>
                 <input class="form-control" type="password" placeholder="Password">
               </div>
               <div class="input-group mb-4">
-                <div class="input-group-prepend"><span class="input-group-text"><img class="c-icon" src="assets/icons/lock-locked.svg" width="16" height="16" alt="CoreUI Icons Lock Locked"></span></div>
+                <div class="input-group-prepend"><span class="input-group-text">
+                    <svg class="c-icon">
+                      <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lock-locked"></use>
+                    </svg></span></div>
                 <input class="form-control" type="password" placeholder="Repeat password">
               </div>
               <button class="btn btn-block btn-success" type="button">Create Account</button>
