--- a/src/404.html
+++ b/src/404.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--
 * CoreUI - Free Bootstrap Admin Template
-* @version v3.0.0-alpha.0
+* @version v3.0.0-alpha.1
 * @link https://coreui.io
-* Copyright (c) 2018 creativeLabs Łukasz Holeczek
+* Copyright (c) 2019 creativeLabs Łukasz Holeczek
 * Licensed under MIT (https://coreui.io/license)
 -->
 
@@ -55,7 +55,7 @@
       gtag('config', 'UA-118965717-5');
     </script>
   </head>
-  <body class="c-app c-default-layout flex-row align-items-center">
+  <body class="c-app flex-row align-items-center">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-6">
@@ -65,7 +65,10 @@
             <p class="text-muted">The page you are looking for was not found.</p>
           </div>
           <div class="input-prepend input-group">
-            <div class="input-group-prepend"><span class="input-group-text"><img class="c-icon" src="assets/icons/magnifying-glass.svg" width="16" height="16" alt="CoreUI Icons Magnifying Glass"></span></div>
+            <div class="input-group-prepend"><span class="input-group-text">
+                <svg class="c-icon">
+                  <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-magnifying-glass"></use>
+                </svg></span></div>
             <input class="form-control" id="prependedInput" size="16" type="text" placeholder="What are you looking for?"><span class="input-group-append">
               <button class="btn btn-info" type="button">Search</button></span>
           </div>
